--- a/views/create_application.hbs
+++ b/views/create_application.hbs
@@ -9,24 +9,45 @@
             <option value="0" selected>Смартфон</option>
             <option value="1">Планшет</option>
         </select>
-        <div onmouseenter="show()" onmouseleave="hide()" id="select_box" class="select_box">
-            <input name="brand" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+        <div onmouseenter="show()" onmouseleave="hide()" id="brand_box" class="brand_box">
+            <input name="brand" type="text" placeholder="Бренд.." id="brand" onkeyup="filterFunction()">
             <div class="hidden_box" id="hidden_box">
                 <a onclick="get('Apple')">Apple</a>
                 <a onclick="get('Samsung')">Samsung</a>
             </div>
-
         </div>
-        <button type="button" onclick="price()">price</button>
+
+        <div onmouseenter="show_model()" onmouseleave="hide_model()" id="model_box" class="model_box">
+            <input name="model" type="text" placeholder="Модель.." id="model" onkeyup="filterFunction_model()">
+            <div class="hidden_box" id="hidden_box_model_apple">
+                <a onclick="get_model('IPhone 5')">IPhone 5</a>
+                <a onclick="get_model('IPhone 6')">IPhone 6</a>
+            </div>
+            <div class="hidden_box" id="hidden_box_model_samsung">
+                <a onclick="get_model('Samsung S10')">Samsung S10</a>
+            </div>
+        </div>
+        <select name="defect" id="defect">
+            <option value="Дисплей">Дисплей</option>
+            <option value="Батарея">Батарея</option>
+            <option value="Кнопки">Кнопки</option>
+            <option value="Порт зарядки">Порт зарядки</option>
+            <option value="Камера">Камера</option>
+            <option value="Плата">Плата</option>
+        </select>
+        <button type="button" onclick="price()">Узнать приблизительную стоимость</button>
         <div id="itog"></div>
         <script>
             function price() {
                 var myHeaders = new Headers();
                 myHeaders.append("Content-Type", "application/json");
-                var input = document.getElementById("myInput");
-                let chel = input.value
+                let brand = document.getElementById("brand").value
+                let model = document.getElementById("model").value
+                let defect = document.getElementById("defect").value
                 var raw = JSON.stringify({
-                    chel
+                    brand,
+                    model,
+                    defect
                 });
 
                 var requestOptions = {
@@ -38,36 +59,34 @@
 
                 fetch("http://localhost:2000/show_price", requestOptions)
                     .then(response => response.text())
-                    .then(result => console.log(result))
+                    .then(result => {
+
+                        itog = document.getElementById("itog");
+                        itog.innerHTML = "<h1>" + JSON.parse(result).price + "</h1>";
+                    })
                     .catch(error => console.log('error', error));
 
-                itog = document.getElementById("itog");
-                itog.innerHTML = "<h1>Привет!</h1>";
-                
-            }
 
+            }
+            //brands
             function show() {
                 document.getElementById('hidden_box').classList.toggle("box");
             }
             function hide() {
                 document.getElementById('hidden_box').classList.remove("box");
             }
-
-            function myFunction() {
-                document.getElementById("myDropdown").classList.toggle("show");
-            }
             function get(name) {
-                var input = document.getElementById("myInput");
+                document.getElementById("model").value = ''
+                var input = document.getElementById("brand");
                 input.value = name
             }
 
-
-
             function filterFunction() {
+                
                 var input, filter, ul, li, a, i;
-                input = document.getElementById("myInput");
+                input = document.getElementById("brand");
                 filter = input.value.toUpperCase();
-                div = document.getElementById("select_box");
+                div = document.getElementById("brand_box");
                 a = div.getElementsByTagName("a");
                 for (i = 0; i < a.length; i++) {
                     txtValue = a[i].textContent || a[i].innerText;
@@ -78,9 +97,60 @@
                     }
                 }
             }
+            //models
+            function show_model() {
+                brand_input = document.getElementById("brand").value
+                if(brand_input == 'Apple'){
+                    document.getElementById('hidden_box_model_apple').classList.toggle("box");
+                }
+                if(brand_input == 'Samsung')
+                {
+                    document.getElementById('hidden_box_model_samsung').classList.toggle("box");
+                }
+                
+            }
+            function hide_model() {
+                brand_input = document.getElementById("brand").value
+                if(brand_input == 'Apple'){
+                    document.getElementById('hidden_box_model_apple').classList.remove("box");
+                }else{
+                    document.getElementById('hidden_box_model_samsung').classList.remove("box");
+                }
+            }
+            function get_model(name) {
+                var input = document.getElementById("model");
+                input.value = name
+            }
+
+            function filterFunction_model() {
+                var input, filter, ul, li, a, i;
+                input = document.getElementById("model");
+                filter = input.value.toUpperCase();
+                div = document.getElementById("model_box");
+                a = div.getElementsByTagName("a");
+                hidden_apple = document.getElementById('hidden_box_model_apple')
+                hidden_samsung = document.getElementById('hidden_box_model_samsung')
+                brand_input = document.getElementById("brand").value
+                if(brand_input == 'Apple'){
+                    hidden_apple.classList.toggle('box')
+                }else{
+                    hidden_samsung.classList.toggle('box')
+                }
+                
+                for (i = 0; i < a.length; i++) {
+                    txtValue = a[i].textContent || a[i].innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        a[i].style.display = "";
+                    } else {
+                        a[i].style.display = "none";
+                    }
+                }
+            }
+
+            
         </script>
 
-        
+
 
         <label>Модель</label>
         <input type="text" name="model">
